--- a/package.xml
+++ b/package.xml
@@ -17,4 +17,6 @@
   <url>https://projects.coin-or.org/qpOASES</url>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <depend>roscpp</depend>
 </package>
