--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ build-qpOase-Desktop_Qt_5_7_1_GCC_64bit-Debug/**
 *.*.autosave
 qpOase/qpOase.pro
 .idea/**
+examples/goal_range.html
+examples/multiple_goals.html
+
